--- a/PAGES/sobre serco.html
+++ b/PAGES/sobre serco.html
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand nav-logo" href="../index.html">
-        <img src="/IMAGES/Serco Blanco contorno negro.png" alt="logo">
+        <img src="../IMAGES/Serco Blanco contorno negro.png" alt="logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -68,13 +68,13 @@
           </div>
           <div class="carousel-img">
             <div class="carousel-item active">
-              <img src="../IMAGES/prueba-history-serco1.jpg" class="d-block w-100" alt="...">
+              <img src="../IMAGES/prueba-history-serco1.jpg" class="d-block" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="../IMAGES/prueba-history-serco2.jpg" class="d-block w-100" alt="...">
+              <img src="../IMAGES/prueba-history-serco2.jpg" class="d-block" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="../IMAGES/prueba-history-serco3.jpg" class="d-block w-100" alt="...">
+              <img src="../IMAGES/prueba-history-serco3.jpg" class="d-block" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
