--- a/PAGES/sucursales.html
+++ b/PAGES/sucursales.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand nav-logo" href="../index.html">
-          <img src="/IMAGES/Serco Blanco contorno negro.png" alt="logo">
+          <img src="../IMAGES/Serco Blanco contorno negro.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
