--- a/PAGES/sobre serco.html
+++ b/PAGES/sobre serco.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serco lubricantes-productos</title>
     <link rel="shortcut icon" href="../IMAGES/HEADER.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
@@ -49,49 +49,47 @@
 </header>
 <!-- contenido oficial de página -->
     <main>
-    <section class="container-serco">
-          <h1>Nuestra Historia</h1>
+    <div class="container-serco">
+        <h1>Nuestra Historia</h1>
         <section class="history-serco">
             <p>Serco Lubricantes es un negocio familiar que fue fundado en el año 2000 en San Miguel de Tucumán, específicamente en la Av. Gral. Roca 541. En sus inicios, nuestro negocio se centraba en la venta de lubricantes y productos relacionados. A medida que el número de vehículos en circulación aumentaba, experimentamos un crecimiento significativo y decidimos expandirnos.
               En reconocimiento a nuestro compromiso y calidad en el servicio, en 2014 fuimos galardonados con el prestigioso premio Águila Panamericana de Oro. Este reconocimiento nos impulsó a seguir mejorando y ofreciendo un servicio excepcional a nuestros clientes.
               Con más de 23 años de experiencia, nos hemos perfeccionado en el campo de los lubricantes. Actualmente, contamos con una sucursal principal ubicada en la Av. Gral. Roca 1796, y hemos expandido nuestra presencia con la apertura de dos locales adicionales en la región. Nos enorgullece ser reconocidos como líderes en el rubro en la provincia de Tucumán y nos esforzamos constantemente por mantenernos como referentes en calidad y servicio.</p>
             <img class="img-premio" src="/IMAGES/aguilap.png" alt="premio">
         </section>
-
-      <section class="container-serco-carousel-aside container-fluid">
-
-        <article id="carouselExampleIndicators" class="carousel slide serco-carousel" data-bs-ride="true">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-img">
-            <div class="carousel-item active">
-              <img src="../IMAGES/prueba-history-serco1.jpg" class="d-block" alt="...">
+        <section class="container-serco-carousel-aside container-fluid">
+          <article id="carouselExampleIndicators" class="carousel slide serco-carousel" data-bs-ride="true">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-item">
-              <img src="../IMAGES/prueba-history-serco2.jpg" class="d-block" alt="...">
+            <div class="carousel-img">
+              <div class="carousel-item active">
+                <img src="../IMAGES/prueba-history-serco1.jpg" class="d-block" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../IMAGES/prueba-history-serco2.jpg" class="d-block" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../IMAGES/prueba-history-serco3.jpg" class="d-block" alt="...">
+              </div>
             </div>
-            <div class="carousel-item">
-              <img src="../IMAGES/prueba-history-serco3.jpg" class="d-block" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
         </article>
         <aside>
         <p>Nos enfocamos en el desarrollo de nuestro equipo de trabajo y en estar al día con las últimas novedades y productos del mercado. Como parte de este compromiso, participamos en capacitaciones y programas de actualización que nos ofrecen las marcas líderes del sector. Esto nos permite brindar a nuestros clientes asesoramiento experto y productos de calidad superior.
               En Serco Lubricantes, nuestra filosofía se basa en la mejora continua. Como negocio familiar, valoramos la confianza y las recomendaciones de nuestros clientes, ya que son la base de nuestro crecimiento. Nos esforzamos día a día para superar las expectativas y garantizar la satisfacción de quienes confían en nosotros.</p>
         </aside>
       </section>
-    </section>
+    </div>
   </main>
 <!--contenido final página  -->
 <footer>
@@ -99,7 +97,7 @@
     <section class="foot-menu">
         <ul>
             <li>
-                <a href="./PAGES/servicios.html">Servicios</a>
+                <a href="../PAGES/servicios.html">Servicios</a>
             </li>
             <li>
                 <a href="#">Terminos y condiciones
