--- a/PAGES/servicios.html
+++ b/PAGES/servicios.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serco lubricantes-productos</title>
     <link rel="shortcut icon" href="../IMAGES/HEADER.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
@@ -48,6 +48,7 @@
   </header>
 <!-- contenido oficial de página -->
     <main>
+      <div>
         <h1>Nuestros servicios</h1>
         <p>Cuando llega el momento de darle mantenimiento a tu vehículo, Serco Lubricantes te ofrece 5 servicios de reparación ligera para mantener tu auto o camión en óptimas condiciones.</p>
         <img src="../IMAGES/WhatsApp Image 2022-10-03 at 11.01.08 AM.jpg" alt="poniendo aceite a un vehiculo">
@@ -90,9 +91,9 @@
                 <p> Al manejar en lluvia, los limpiaparabrisas se convierten en algo esencial para garantizar una conducción cómoda y segura.</p>
                 <h3>¿POR QUÉ REALIZAR ESTE SERVICIO?</h3>
                 <p> Las plumas del limpiaparabrisas deben cambiarse en cuanto notes una disminución en la visibilidad. Esto puede suceder cuando las plumas están agrietadas, peladas o quebradizas.Visita un Serco Lubricantes más cercano y solicita a nuestros especialistas que inspeccionen o reemplacen las plumas limpiaparabrisas, revisen los niveles del líquido limpiaparabrisas y rellenen, en caso de ser necesario. </p>
-            </article>
-        
+            </article> 
         </section>
+      </div>
     </main>
 <!--contenido final página  -->
 <footer>
