--- a/PAGES/sobre serco.html
+++ b/PAGES/sobre serco.html
@@ -66,13 +66,13 @@
             </div>
             <div class="carousel-img">
               <div class="carousel-item active">
-                <img src="../IMAGES/prueba-history-serco1.jpg" class="d-block" alt="...">
+                <img src="../IMAGES/prueba-history-serco1.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../IMAGES/prueba-history-serco2.jpg" class="d-block" alt="...">
+                <img src="../IMAGES/prueba-history-serco2.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../IMAGES/prueba-history-serco3.jpg" class="d-block" alt="...">
+                <img src="../IMAGES/prueba-history-serco3.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
