--- a/PAGES/servicios.html
+++ b/PAGES/servicios.html
@@ -51,26 +51,22 @@
       <div class="service-conteiner">
         <h1>Nuestros servicios</h1>
         <section class="tittle-service">
-          <div class="tittle-text">
             <p>Cuando llega el momento de darle mantenimiento a tu vehículo, Serco Lubricantes te ofrece 5 servicios de reparación ligera para mantener tu moto, auto o camión en óptimas condiciones.</p>
-          </div>
-            <img src="../IMAGES/WhatsApp Image 2022-10-03 at 11.01.08 AM.jpg" alt="poniendo aceite a un vehiculo">
+              <!--  <img src="../IMAGES/puesta-de-aceite.jpg" alt="cambio de aceite a un auto">-->
         </section>
         <section>
-            <article class="service-1">
-              <div calss="service-1-text">
+          <div class="service-1-2">
+            <section class="service-1">
                 <h2>MANTENIMIENTO & CAMBIO DE ACEITE Y FILTRO</h2>
                 <p>Cambiar regularmente el aceite y filtro de tu vehículo, es esencial para mantener el motor limpio y lubricado, lo cual ayudará a que funcione de manera optima.Se recomienda que al realizar el cambio de aceite también se cambie el filtro. Esto asegura la máxima filtración de contaminantes del aceite, protegiendo el motor y prolongando la vida útil de tu vehículo.
                     En Serco Lubricantes facilitamos este proceso, haciendo ambas cosas, ahorrándote tiempo y dinero.
                     Un cambio de aceite y filtro en Serco lubricantes permitirá que tu vehículo funcione de manera óptima. Maximizando el rendimiento de tu motor y reduciendo su desgaste general al usar el aceite adecuado y cambiándolo con frecuencia para mantenerlo limpio.</p>
                 <h3>¿CON QUÉ FRECUENCIA DEBO REALIZAR ESTE SERVICIO?</h3>
                 <p>Sigue las recomendaciones indicadas en el manual de propietario de tu vehículo. Normalmente, los periodos de mantenimiento oscilan entre los 10,000 y 15,000 kilómetros.
-                    No es necesario que agendes una cita; pero si prefieres programar una visita, comunícate con la sucursal de Serco Lubricantes más cercana.</p>
-                </div>
-                <img src="../IMAGES/puesta-de-aceite.jpg" alt="cambio de aceite a un auto">
-            </article>
-            <article class="service-2">
-              <div>
+                    No es necesario que agendes una cita; pero si prefieres programar una visita, comunícate con la sucursal de Serco Lubricantes más cercana.</p> 
+                <!--  <img src="../IMAGES/puesta-de-aceite.jpg" alt="cambio de aceite a un auto">-->
+            </section>
+            <section class="service-2">
                 <h2>INSPECCIÓN DE PUNTOS DE SEGURIDAD</h2>
                 <p> Al visitarnos, nuestros técnicos certificados inspeccionarán minuciosamente tu vehículo para proporcionarte un reporte detallado de su estado con la finalidad de estar al día en su mantenimiento. </p>
                 <h3>¿QUÉ INCLUYE EL REPORTE DE REVISIÓN?</h3>
@@ -78,40 +74,31 @@
                <li> Revisión de niveles del sistema de enfriamiento</li>
                <li> Inspección de frenos</li>
                <li> Revisión de niveles de aceite</li>
-              </div>
-               <img src="../IMAGES/WhatsApp Image 2022-10-03 at 11.01.08 AM.jpg" alt="poniendo aceite a un vehiculo">
-                
-            </article>
-            <article class="service-3">
-              <div>
+               <!--  <img src="../IMAGES/puesta-de-aceite.jpg" alt="cambio de aceite a un auto">-->
+            </section>    
+          </div>
+            <section class="service-3">
                 <h2>SISTEMA DE AIRE ACONDICIONADO</h2>
                 <p> Los ajustes y limpiezas al sistema de aire acondicionado garantizan que tu vehículo esté listo para hacer frente a temperaturas extremas.Nuestros técnicos en Serco Lubricantes inspeccionarán el sistema de aire acondicionado de tu auto para asegurarse de que funciona de manera óptima.</p> 
                 <h3>¿CON QUÉ FRECUENCIA DEBO REALIZAR ESTE SERVICIO?</h3>
                 <p> Se recomienda darle servicio cada tres años o dependiendo de las condiciones del clima; sin embargo, recomendamos consultar el manual del propietario para mayor referencia. 
                     Si el sistema de aire acondicionado de tu vehículo está emitiendo aire caliente, es posible que requiera mantenimiento. Consulta en tu sucursal Serco Lubricantes más cercana la disponibilidad del servicio.</p>
-              </div>
-                <img src="../IMAGES/WhatsApp Image 2022-10-03 at 11.01.08 AM.jpg" alt="poniendo aceite a un vehiculo">
-
-            </article>
-            <article class="service-4">
-              <div>
+              <!--  <img src="../IMAGES/puesta-de-aceite.jpg" alt="cambio de aceite a un auto">-->
+            </section>
+            <section class="service-4">
                 <h2>LÁMPARAS Y FOCOS</h2>
                 <p> Sin duda, cuando manejas es necesario ver con claridad todo lo que está frente a ti y poder comunicarte con los conductores que van detrás. Por eso, es importante reemplazar las lámparas y/o focos fundidos lo antes posible.</p>
                 <h3>¿CON QUÉ FRECUENCIA DEBO REALIZAR ESTE SERVICIO?</h3>
                 <p> Cuando detectes una lámpara o foco fundido, visita tu Serco Lubricantes más cercano y nuestros expertos reemplazarán rápidamente los faros, luces traseras, luces de freno, intermitentes y también cualquiera de los focos interiores de la cabina de tu vehículo.</p>
-              </div>
-                <img src="../IMAGES/WhatsApp Image 2022-10-03 at 11.01.08 AM.jpg" alt="poniendo aceite a un vehiculo">
-            </article>
-            <article class="service-5">
-              <div>
+              <!--  <img src="../IMAGES/puesta-de-aceite.jpg" alt="cambio de aceite a un auto">-->
+            </section>
+            <section class="service-5">
                 <h2>PLUMAS LIMPIAPARABRISAS</h2>
                 <p> Al manejar en lluvia, los limpiaparabrisas se convierten en algo esencial para garantizar una conducción cómoda y segura.</p>
                 <h3>¿POR QUÉ REALIZAR ESTE SERVICIO?</h3>
                 <p> Las plumas del limpiaparabrisas deben cambiarse en cuanto notes una disminución en la visibilidad. Esto puede suceder cuando las plumas están agrietadas, peladas o quebradizas.Visita un Serco Lubricantes más cercano y solicita a nuestros especialistas que inspeccionen o reemplacen las plumas limpiaparabrisas, revisen los niveles del líquido limpiaparabrisas y rellenen, en caso de ser necesario. </p>
-              </div>
-                <img src="../IMAGES/WhatsApp Image 2022-10-03 at 11.01.08 AM.jpg" alt="poniendo aceite a un vehiculo">
-            </article> 
-        </section>
+              <!--  <img src="../IMAGES/puesta-de-aceite.jpg" alt="cambio de aceite a un auto">-->
+            </section> 
       </div>
     </main>
 <!--contenido final página  -->
