lo que hicimos hasta la fecha

--- a/PAGES/preguntas-y-contacto.html
+++ b/PAGES/preguntas-y-contacto.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serco lubricantes-productos</title>
+    <meta name="description" content="¿Tienes preguntas sobre nuestros lubricantes o deseas realizar un pedido? Ponte en contacto con nosotros a través de nuestra página de contacto. Nuestro equipo estará encantado de asistirte y brindarte la información que necesitas. ¡No esperes más para proteger el motor de tu automóvil o moto con nuestros productos!">
+    <title>Serco Lubricantes | Contáctanos | Lubricantes para Automóviles y Motos | Consulta y Pedidos</title>
     <link rel="shortcut icon" href="../IMAGES/HEADER.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -66,7 +67,7 @@
     <section class="foot-menu">
         <ul>
             <li>
-                <a href="./PAGES/servicios.html">Servicios</a>
+                <a href="../PAGES/servicios.html">Servicios</a>
             </li>
             <li>
                 <a href="#">Terminos y condiciones
