--- a/PAGES/sobre serco.html
+++ b/PAGES/sobre serco.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serco lubricantes-productos</title>
+    <meta name="description" content="Descubre nuestra apasionante historia en el mundo de los lubricantes para automóviles y motos. Desde el año 2000, nos hemos comprometido a brindar productos de la más alta calidad y el mejor servicio a nuestros clientes. Conoce cómo nos hemos convertido en referentes en el cuidado de motores en la región y cómo seguimos innovando para satisfacer tus necesidades.">
+    <title>Serco Lubricantes | Nuestra Historia | Pasión por el Cuidado de Motores desde el año 2000</title>
     <link rel="shortcut icon" href="../IMAGES/HEADER.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
