--- a/PAGES/servicios.html
+++ b/PAGES/servicios.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serco lubricantes-productos</title>
+    <meta name="description" content="Conoce nuestros servicios especializados en lubricantes para automóviles y motos. Nuestro equipo de expertos te brindará asesoramiento personalizado para seleccionar el lubricante ideal para tu vehículo. Además, ofrecemos cambios de aceite y mantenimiento para asegurar un rendimiento óptimo de tu motor. ¡Confía en nosotros para el cuidado de tu vehiculo!">
+    <title>Serco Lubricantes | Nuestros Servicios de Lubricantes | Especialistas en Cuidado de Motores</title>
     <link rel="shortcut icon" href="../IMAGES/HEADER.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -117,7 +118,7 @@
     <section class="foot-menu">
         <ul>
             <li>
-                <a href="./PAGES/servicios.html">Servicios</a>
+                <a href="../PAGES/servicios.html">Servicios</a>
             </li>
             <li>
                 <a href="#">Terminos y condiciones</a>
