--- a/PAGES/sucursales.html
+++ b/PAGES/sucursales.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sucursales</title>
+    <meta name="description" content="Descubre nuestras sucursales y encuentra la más cercana a tu ubicación. Con múltiples puntos de venta en la región, estamos listos para atenderte y ofrecerte los mejores lubricantes para automóviles y motos. Obtén el asesoramiento que necesitas y adquiere nuestros productos de calidad en la sucursal más conveniente para ti.">
+    <title>Serco Lubricantes |  Nuestras Sucursales | Encuentra el Lubricante más Cercano a vos</title>
     <link rel="shortcut icon" href="../IMAGES/HEADER.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -94,7 +95,7 @@
     <section class="foot-menu">
         <ul>
             <li>
-                <a href="./PAGES/servicios.html">Servicios</a>
+                <a href="../PAGES/servicios.html">Servicios</a>
             </li>
             <li>
                 <a href="#">Terminos y condiciones
