--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serco lubricantes-cotiza el cambio de aceite completo del motor-turnos online-aceite,filtros,vehiculos</title>
+    <meta name="description" content="Bienvenido a nuestro sitio web de lubricantes para automóviles y motos. Ofrecemos la mejor selección de lubricantes para garantizar una protección óptima del motor de tu vehículo. Descubre nuestra amplia gama de productos y brinda a tu automóvil o moto el cuidado que se merece. ¡Consulta nuestras ofertas hoy mismo!">
+    <title>Serco lubricantes | Cotiza el cambio de aceite completo del motor | Turnos online  | Aceite,filtros todo para tu vehiculo  | La Mejor Protección para tu Motor</title>
     <link rel="shortcut icon" href="../IMAGES/HEADER.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./CSS/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
