--- a/PAGES/sucursales.html
+++ b/PAGES/sucursales.html
@@ -95,7 +95,7 @@
     <section class="foot-menu">
         <ul>
             <li>
-                <a href="../PAGES/servicios.html">Servicios</a>
+                <a href="./servicios.html">Servicios</a>
             </li>
             <li>
                 <a href="#">Terminos y condiciones
