--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <header class="nav-container">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand nav-logo" href="./index.html">
-          <img src="./IMAGES/Serco Blanco contorno negro.png" alt="logo">
+        <a class="navbar-brand nav-logo" href="../index.html">
+          <img src="./IMAGES/logo-serco-naranja.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -24,25 +24,25 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-menu me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="./PAGES/servicios.html">Servicios</a>
+                <a class="nav-link" aria-current="page" href="../PAGES/servicios.html">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./PAGES/sobre serco.html">Sobre Serco</a>
+                <a class="nav-link" href="../PAGES/sobre serco.html">Sobre Serco</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./PAGES/sucursales.html">Sucursales</a>
+                <a class="nav-link" href="../PAGES/sucursales.html">Sucursales</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Consúltanos</a>
               <ul class="dropdown-menu dropdown-custom">
                 <li>
-                  <a class="dropdown-item" href="./PAGES/preguntas-y-contacto.html">Dame un turno</a>
+                  <a class="dropdown-item" href="../PAGES/preguntas-y-contacto.html">Dame un turno</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./PAGES/preguntas-y-contacto.html">Cotizá</a>
+                  <a class="dropdown-item" href="../PAGES/preguntas-y-contacto.html">Cotizá</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./PAGES/preguntas-y-contacto.html">Enviar consulta</a>
+                  <a class="dropdown-item" href="../PAGES/preguntas-y-contacto.html">Enviar consulta</a>
                 </li>
               </ul>
               </li>
@@ -58,7 +58,7 @@
   </header>
 <!-- contenido oficial de página -->
   <main>  
-      <img class="gif-serco" src="./IMAGES/gif prueba.jpg" alt="gif o foto de imagen">
+      <img class="gif-serco" src="./IMAGES/gif-prueba.jpg" alt="gif o foto de imagen">
       <h1 class="title" >Expertos en cambio de aceite, filtros de calidad y atención personalizada. 
         <span>Descubre el servicio confiable y profesional que necesitas para mantener tu vehículo en óptimas condiciones.</span>
       </h1>
