--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-menu me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../PAGES/servicios.html">Servicios</a>
+                <a class="nav-link" aria-current="page" href="./PAGES/servicios.html">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../PAGES/sobre serco.html">Sobre Serco</a>
+                <a class="nav-link" href="./PAGES/sobre serco.html">Sobre Serco</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../PAGES/sucursales.html">Sucursales</a>
+                <a class="nav-link" href="./PAGES/sucursales.html">Sucursales</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Consúltanos</a>
               <ul class="dropdown-menu dropdown-custom">
                 <li>
-                  <a class="dropdown-item" href="../PAGES/preguntas-y-contacto.html">Dame un turno</a>
+                  <a class="dropdown-item" href="./PAGES/preguntas-y-contacto.html">Dame un turno</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../PAGES/preguntas-y-contacto.html">Cotizá</a>
+                  <a class="dropdown-item" href="./PAGES/preguntas-y-contacto.html">Cotizá</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../PAGES/preguntas-y-contacto.html">Enviar consulta</a>
+                  <a class="dropdown-item" href="./PAGES/preguntas-y-contacto.html">Enviar consulta</a>
                 </li>
               </ul>
               </li>
