--- a/PAGES/sucursales.html
+++ b/PAGES/sucursales.html
@@ -107,10 +107,10 @@
             <a href="../PAGES/servicios.html">Servicios</a>
           </li>
           <li>
-            <a href="#">Terminos y condiciones</a>
+            <a href="../PAGES/error-404.html">Terminos y condiciones</a>
           </li>
           <li>
-            <a href="#">Cotiza tu vehiculo</a>
+            <a href="../PAGES/error-404.html">Cotiza tu vehiculo</a>
           </li>
         </ul>
       </section>
