preparando para entrega final

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="nav-container">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand nav-logo" href="../index.html">
+        <a class="navbar-brand nav-logo" href="./index.html">
           <img src="./IMAGES/logo-serco-naranja.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,7 +82,9 @@
         </article>
         <aside class="main-reco">
           <h2>Recomendaciones de nuestros clientes que te garantizan nuestro trabajo:</h2>
-          <img src="./IMAGES/Opiniones.png" alt="opiniones de google">
+          <div class="img-opinion">
+            <img src="./IMAGES/Opiniones.png" alt="opiniones de google">
+          </div>
         </aside>
       </section>
   </main>
