poniendo img nuevas

--- a/PAGES/servicios.html
+++ b/PAGES/servicios.html
@@ -74,7 +74,7 @@
             <p>Sigue las recomendaciones indicadas en el manual de propietario de tu vehículo. Normalmente, los periodos de mantenimiento oscilan entre los 10,000 y 15,000 kilómetros.
             No es necesario que agendes una cita; pero si prefieres programar una visita, comunícate con la sucursal de Serco Lubricantes más cercana.</p> 
           </div>
-          <img src="../IMAGES/service-aceite.jpg" alt="persona colocando aceite lubricante">
+          <img src="../IMAGES/service-aceite.png" alt="empleado colocando aceite lubricante">
         </section>
         <section class="service-2">
           <div class="service-text">
@@ -88,7 +88,7 @@
               <li>Revisión de niveles de aceite</li>
             </ul>
           </div>
-          <img src="../IMAGES/service-seguridad.jpg" alt="persona verificando puntos del vehiculo">
+          <img src="../IMAGES/service-seguridad.png" alt="empleado verificando chapon del vehiculo">
         </section>    
       </div>
       <section class="service-3">
@@ -99,7 +99,7 @@
           <p> Se recomienda darle servicio cada tres años o dependiendo de las condiciones del clima; sin embargo, recomendamos consultar el manual del propietario para mayor referencia. 
           Si el sistema de aire acondicionado de tu vehículo está emitiendo aire caliente, es posible que requiera mantenimiento. Consulta en tu sucursal Serco Lubricantes más cercana la disponibilidad del servicio.</p>
         </div>
-        <img src="../IMAGES/service-aac.jpg" alt="boton aire acondicionado vehiculo">
+        <img src="../IMAGES/service-aac.png" alt="empleado chequeando funcionamiento de aire acondicionado">
       </section>
       <section class="service-4">
         <div class="service-text">
@@ -108,7 +108,7 @@
           <h3>¿CON QUÉ FRECUENCIA DEBO REALIZAR ESTE SERVICIO?</h3>
           <p> Cuando detectes una lámpara o foco fundido, visita tu Serco Lubricantes más cercano y nuestros expertos reemplazarán rápidamente los faros, luces traseras, luces de freno, intermitentes y también cualquiera de los focos interiores de la cabina de tu vehículo.</p>
         </div>
-        <img src="../IMAGES/service-focos.jpg" alt="faroles de vehiculo">
+        <img src="../IMAGES/service-lamp.png" alt="empleado chequeando lamparas de auto">
       </section>
       <section class="service-5">
         <div class="service-text">
@@ -117,7 +117,7 @@
           <h3>¿POR QUÉ REALIZAR ESTE SERVICIO?</h3>
           <p> Las plumas del limpiaparabrisas deben cambiarse en cuanto notes una disminución en la visibilidad. Esto puede suceder cuando las plumas están agrietadas, peladas o quebradizas. Visita un Serco Lubricantes más cercano y solicita a nuestros especialistas que inspeccionen o reemplacen las plumas limpiaparabrisas, revisen los niveles del líquido limpiaparabrisas y rellenen, en caso de ser necesario. </p>
         </div>
-        <img src="../IMAGES/service-parabrisa.jpg" alt="parabrisa demostracion">
+        <img src="../IMAGES/service-parabrisa.png" alt="empleado cambiando parabrisa de auto">
       </section> 
     </div>
   </main>
