--- a/PAGES/error-404.html
+++ b/PAGES/error-404.html
@@ -62,7 +62,7 @@
       <p>Por favor, verifica la URL o intenta regresar al menú o la página de contacto.</p>
       <img src="../IMAGES/error-404-peugeot.svg" alt="error 404 peugeot">
       <div class="btn-404-gral">
-        <a class="btn-404" href="../index.html">Menú</a>
+        <a class="btn-404" href="../index.html">Volver a inicio</a>
         <a class="btn-404" href="./preguntas-y-contacto.html">Contacto</a>
       </div>
     </section>
