--- a/PAGES/preguntas-y-contacto.html
+++ b/PAGES/preguntas-y-contacto.html
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="../PAGES/sucursales.html">Sucursales</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Consúltanos</a>
+                <a class="nav-link dropdown-toggle" href="./error-404.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Consúltanos</a>
               <ul class="dropdown-menu dropdown-custom">
                 <li>
                   <a class="dropdown-item" href="../PAGES/preguntas-y-contacto.html">Dame un turno</a>
