--- a/PAGES/preguntas-y-contacto.html
+++ b/PAGES/preguntas-y-contacto.html
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="../PAGES/sucursales.html">Sucursales</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="./error-404.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Consúltanos</a>
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Consúltanos</a>
               <ul class="dropdown-menu dropdown-custom">
                 <li>
                   <a class="dropdown-item" href="../PAGES/preguntas-y-contacto.html">Dame un turno</a>
@@ -66,7 +66,7 @@
           <input class="contact-form-input" type="number" placeholder="Número" required>
           <input class="contact-form-input" type="text" placeholder="Vehiculo/modelo" required>
           <textarea class="contact-form-textarea" placeholder="¿Que deseas consultar?"></textarea> 
-          <center><button class="contact-form-button">Enviar</button></center>
+          <center><button href="../PAGES/error-404.html" class="contact-form-button">Enviar</button></center>
         </form>
     </div>
   </main>
