--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
           </div>
         </article>
         <article class="main-text-description">
-          <p> Cuidamos de tu vehículo, lo tratamos como se merece.</p>
+          <h2> Recomendaciones de nuestros clientes que te garantizan nuestro trabajo:</h2>
         </article>
         <aside class="main-reco">
-          <h2>Recomendaciones de nuestros clientes que te garantizan nuestro trabajo:</h2>
           <div class="img-opinion">
             <img src="./IMAGES/Opiniones.png" alt="opiniones de google">
           </div>
+          <h3>Cuidamos de tu vehículo, lo tratamos como se merece.</h3>
         </aside>
       </section>
   </main>
